{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 57,
  "lineage": "95cb6265-defb-752d-228b-054175094229",
  "resources": [
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "project_18_eip",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efa1f911c6b5e08c",
            "domain": "vpc",
            "id": "eipalloc-0efa1f911c6b5e08c",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-253-143-107.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.143.107",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_18_prod-igw",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:internet-gateway/igw-0a6c6a504588e42de",
            "id": "igw-0a6c6a504588e42de",
            "owner_id": "096980472160",
            "tags": {
              "Name": "project_18_prod-igw"
            },
            "tags_all": {
              "Name": "project_18_prod-igw"
            },
            "vpc_id": "vpc-074d451d481bb014c"
          },
          "dependencies": [
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project_18_prod-nat-gateway",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efa1f911c6b5e08c",
            "connectivity_type": "public",
            "id": "nat-0c57b07231ec629df",
            "network_interface_id": "eni-035e26e6d56ab3e1f",
            "private_ip": "10.0.0.52",
            "public_ip": "34.253.143.107",
            "subnet_id": "subnet-0bc153cbd5a9a27a0",
            "tags": {
              "Name": "project_18_prod-nat-gateway"
            },
            "tags_all": {
              "Name": "project_18_prod-nat-gateway"
            }
          },
          "dependencies": [
            "module.creating_project_18_from_module.aws_eip.project_18_eip",
            "module.creating_project_18_from_module.aws_subnet.project_18_prod_pub_sub_1",
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_18_prod-priv-route-table",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:route-table/rtb-02a2d9e0b702cf15b",
            "id": "rtb-02a2d9e0b702cf15b",
            "owner_id": "096980472160",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project_18_prod-pub-route-table"
            },
            "tags_all": {
              "Name": "project_18_prod-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-074d451d481bb014c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_18_prod_pub_route_table",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:route-table/rtb-0ed698955da7f506b",
            "id": "rtb-0ed698955da7f506b",
            "owner_id": "096980472160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/00",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6c6a504588e42de",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proj18_prod_pub_route_table"
            },
            "tags_all": {
              "Name": "proj18_prod_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-074d451d481bb014c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.creating_project_18_from_module.aws_internet_gateway.project_18_prod-igw",
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_18_pub_rtb",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0096b85df1ebd007c",
            "route_table_id": "rtb-0ed698955da7f506b",
            "subnet_id": "subnet-0bc153cbd5a9a27a0"
          },
          "dependencies": [
            "module.creating_project_18_from_module.aws_internet_gateway.project_18_prod-igw",
            "module.creating_project_18_from_module.aws_route_table.project_18_prod_pub_route_table",
            "module.creating_project_18_from_module.aws_subnet.project_18_prod_pub_sub_1",
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_18_prod_priv_sub_1",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:subnet/subnet-009d5bcc536a6a1b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009d5bcc536a6a1b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096980472160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_18_prod_priv_sub_1"
            },
            "tags_all": {
              "Name": "project_18_prod_priv_sub_1"
            },
            "vpc_id": "vpc-074d451d481bb014c"
          },
          "dependencies": [
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_18_prod_priv_sub_2",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:subnet/subnet-030f1c01af141274c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030f1c01af141274c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096980472160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_18_prod_priv_sub_2"
            },
            "tags_all": {
              "Name": "project_18_prod_priv_sub_2"
            },
            "vpc_id": "vpc-074d451d481bb014c"
          },
          "dependencies": [
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_18_prod_pub_sub_1",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:subnet/subnet-0bc153cbd5a9a27a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc153cbd5a9a27a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096980472160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_18_prod_pub_sub_1"
            },
            "tags_all": {
              "Name": "project_18_prod_pub_sub_1"
            },
            "vpc_id": "vpc-074d451d481bb014c"
          },
          "dependencies": [
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_18_prod_pub_sub_2",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:subnet/subnet-0600c8f49f04f04c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0600c8f49f04f04c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096980472160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_18_prod_pub_sub_2"
            },
            "tags_all": {
              "Name": "project_18_prod_pub_sub_2"
            },
            "vpc_id": "vpc-074d451d481bb014c"
          },
          "dependencies": [
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_18_prod_pub_sub_3",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:subnet/subnet-048cc4d8e9c3496c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048cc4d8e9c3496c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096980472160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_18_prod_pub_sub_3"
            },
            "tags_all": {
              "Name": "project_18_prod_pub_sub_3"
            },
            "vpc_id": "vpc-074d451d481bb014c"
          },
          "dependencies": [
            "module.creating_project_18_from_module.aws_vpc.project_18_vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_18_vpc_1",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:vpc/vpc-074d451d481bb014c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0901e665b8e17932c",
            "default_route_table_id": "rtb-0649453aa3a85aeec",
            "default_security_group_id": "sg-0ac9334e51adc22fe",
            "dhcp_options_id": "dopt-0909785fb576e3917",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074d451d481bb014c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0649453aa3a85aeec",
            "owner_id": "096980472160",
            "tags": {
              "Name": "project_18_vpc_1"
            },
            "tags_all": {
              "Name": "project_18_vpc_1"
            }
          }
        }
      ]
    },
    {
      "module": "module.creating_project_18_from_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_18_vpc_2",
      "provider": "module.creating_project_18_from_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:096980472160:vpc/vpc-05a8420a284dea98e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f9217963557cd272",
            "default_route_table_id": "rtb-026c7966dd9e73bdf",
            "default_security_group_id": "sg-0a3c230a6dd4cddd7",
            "dhcp_options_id": "dopt-0909785fb576e3917",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a8420a284dea98e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026c7966dd9e73bdf",
            "owner_id": "096980472160",
            "tags": {
              "Name": "project_18_vpc_2"
            },
            "tags_all": {
              "Name": "project_18_vpc_2"
            }
          }
        }
      ]
    }
  ]
}